--- a/Kubernets/deployments/app-deployment.yaml
+++ b/Kubernets/deployments/app-deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: app-nestjs-api
     spec:
+      restartPolicy: Always
       containers: 
         - name: app-container
           image: mhferreira/app-dev-ops
